Fix database with SQLite and resolve metadata conflicts

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-DATABASE_URL=postgresql://user:password@localhost:5432/ringtone_db
+DATABASE_URL=sqlite:///./ringtone.db
 REDIS_URL=redis://localhost:6379/0
 SECRET_KEY=dev-secret-key-change-in-production
 AWS_ACCESS_KEY_ID=
