--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,7 +19,7 @@ services:
 
   api:
     build: .
-    command: uvicorn main:app --host 0.0.0.0 --port 8000 --reload
+    command: uvicorn web_app:app --host 0.0.0.0 --port 8000 --reload
     volumes:
       - .:/app
     ports:
